fix alignment issue after review

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body {
 
 .nav-item {
   list-style: none;
-  padding: 20px;
+  padding: 17px;
 }
 
 .nav-item a {
